styles.css
* {
    box-sizing: border-box;
    max-width: 100%;
    font-family: "Lato", Arial, sans-serif; /* Available Lato weights: 400 & 900 */
    text-align: center;
}

h2 {
    margin-top: 3em;
}

caption {
    margin-top: 1em;
    padding: 0.5em;
    font-size: 1.4em;
    font-style: italic;
}

pre,
table {
    margin: auto; /* Centre tables and code snippets */
    margin-top: 2em;
}

table,
th,
td {
    border: 2px solid darkgray;
    border-collapse: collapse;
}

th,
td {
    padding: 1em 0.8em;
}

th {
    background-color: dodgerblue;
    border: 2px solid dodgerblue;
    border-bottom: 2px solid darkgray;
    color: azure;
    font-size: 1.2em;
}

table.reference th:nth-child(3),
table.reference td:nth-child(3) {
    text-align: left; /* 3rd column (description) in reference tables */
}

tfoot {
    border-top: 4px solid navy;
}

.code {
    padding: 0.2em;
    background-color: rgb(230, 240, 255);
    font-family: Courier, monospace;
    font-size: 0.9em;
    font-weight: bold;
}

pre.code {
    display: inline-block;
    min-width: 50%;
    overflow: scroll;
    padding: 1em;
    border: 1px solid darkgray;
    text-align: left;
}

